changes in app.propirties for creating migration more easy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/pcstore?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=Nadym1971
+spring.jpa.generate.ddl=true
 spring.jpa.show-sql=true
+##below command with 'create' means db will be delete and create again folowing by entitie files.
+##but with 'validate' it will check correction of present DB
+spring.jpa.hibernate.ddl-auto=validate
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
