--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/pcstore?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=Nadym1971
-spring.jpa.generate.ddl=true
-spring.jpa.show-sql=true
-##below command with 'create' means db will be delete and create again folowing by entitie files.
+
+spring.jpa.generate.ddl=false
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+##below command with 'create' means db will be delete and create again folowing by entitie files. 
+##command 'update' just update all changes
 ##but with 'validate' it will check correction of present DB
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
