--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        
         <!--Embedded Web Server Tomcat-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,7 +55,23 @@
             <version>8.0.33</version>
         </dependency>
         
-        
+        <!--Security-->
+<!--        <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>4.0.4.RELEASE</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.2.2.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
        
