--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+#Security and Authentication
+jwt.token.secretWord = pcstore
+jwt.token.expired = 3 600 000
+
