working login/logout/expired token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Security and Authentication
 jwt.token.secretWord = pcstore
-jwt.token.expired = 3 600 000
+jwt.token.expired = 30 000
 
