added tables: parts, packages, order_details, package_details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=Nadym1971
 
 spring.jpa.generate.ddl=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
-##below command with 'create' means db will be delete and create again folowing by entitie files. 
-##command 'update' just update all changes
-##but with 'validate' it will check correction of present DB
+##'=update' just update all changes
+##'=create' means db will be delete and create again folowing by entitie files. 
+##'=validate' it will check correction of present DB
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
